storage/myisam/myisamdef.h
@@ -199,6 +199,7 @@ typedef struct st_mi_isam_share
   ulong max_pack_length;
   ulong state_diff_length;
   uint	rec_reflength;			/* rec_reflength in use now */
+  ulong vreclength;                     /* full reclength, including vcols */
   uint  unique_name_length;
   uint32 ftkeys;                        /* Number of full-text keys + 1 */
   File	kfile;				/* Shared keyfile */
